--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,7 +2,7 @@ FROM  node:16-alpine as builder
 WORKDIR '/app'
 COPY ./package.json ./
 RUN npm install
-#RUN mkdir -p node_modules/.cache && chmod -R 777 node_modules/.cache
+RUN mkdir -p node_modules/.cache && chmod -R 777 node_modules/.cache
 COPY . .
 RUN npm run builder
 
