--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,10 +1,9 @@
-FROM  node:16-alpine as builder
+FROM node:16-alpine as builder
 WORKDIR '/app'
 COPY ./package.json ./
 RUN npm install
-#RUN mkdir -p node_modules/.cache && chmod -R 777 node_modules/.cache
 COPY . .
-RUN npm run builder
+RUN npm run build
 
 FROM nginx
 EXPOSE 3000
