--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,14 @@ after_success:
   - docker push ljulc/multi-server
   - docker push ljulc/multi-worker
   
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "multi-docker"
+  env: "MultiDocker-env"
+  bucket_name: "elasticbeanstalk-us-east-2-437503175243"
+  bucket_path: "docker-multi"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: "$AWS_SECRET_KEY"
