--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ deploy:
   provider: elasticbeanstalk
   region: "us-east-2"
   app: "multi-docker"
-  env: "MultiDocker-env"
+  env: "Multidocker-env"
   bucket_name: "elasticbeanstalk-us-east-2-437503175243"
   bucket_path: "docker-multi"
   on:
